aks/argocd/kustomize/base/argocd-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hosts:
    - "argocd.aks-demo.vtch.tech"
  gateways:
    - argocd-gateway
  http:
    - name: "gradle-cache"
      match:
        - uri:
            prefix: "/gradle/"
        - uri:
            prefix: "/gradle"
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 80
            host: gradle-build-cache-gradle-cache
    - name: "gradle-cache-assets"
      match:
        - uri:
            prefix: "/status"
        - uri:
            prefix: "/snapshot"
        - uri:
            prefix: "/credentials"
        - uri:
            prefix: "/purge"
      route:
        - destination:
            port:
              number: 80
            host: gradle-build-cache-gradle-cache
    - name: "argocd"
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 80
            host: argocd-server
