aks/argocd/kustomize/base/argocd-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: argocd-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts: ["argocd.aks-demo.vtch.tech"]
            paths: ["/gradle/cache/*", "/download/*"]
        - operation:
            hosts: ["argocd.aks-demo.vtch.tech:80"]
            paths: ["/application*", "/cluster*"]
